--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     background-image: linear-gradient(-20deg, #00cdac 0%, #8ddad5 100%);
 }
@@ -46,4 +49,7 @@ body{
 .weatherIcon{
     width: fit-content;
     margin: -20%;
+}
+.card{
+    display: none;
 }
