weather api to be responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,41 +14,24 @@ body{
     max-width: 40%;
     background: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
     border-radius: 20px;
-    padding: 40px 35px;
-    text-align: center;
 }
-.weather h1{
-    font-size: 80px;
-    font-weight: 500;
-}
-.weather h2{
-    font-size: 45px;
-    font-weight: 400;
-    margin-top: -10px;
-}
-.details{
+/*.details{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
 }
-.col{
+.sub{
     display: flex;
     align-items: center;
-    text-align: left;
+}*/
+.humidity, .wind {
+    display: flex;
 }
-.col img{
+.sub img{
     width: 40px;
-    margin-right: 10px;
-}
-.humidity, .wind{
-    font-size: 28px;
-    margin-top: -6px;
 }
 .weatherIcon{
     width: fit-content;
-    margin: -20%;
 }
 .card{
     display: none;
