--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,28 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body{
-    background-image: linear-gradient(-20deg, #00cdac 0%, #8ddad5 100%);
+body {
+    background-image: url("/assets/images/MountainBG.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.card{
+.card {
     width: 40%;
     max-width: 40%;
-    background: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
+    background: linear-gradient(95.2deg, rgba(173, 252, 234, 1) 26.8%, rgba(192, 229, 246, 1) 64%);
     border-radius: 20px;
+    opacity: .92;
 }
-/*.details{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.sub{
-    display: flex;
-    align-items: center;
-}*/
-.humidity, .wind {
-    display: flex;
-}
-.sub img{
+.sub img {
     width: 40px;
 }
-.weatherIcon{
+.weatherIcon {
     width: fit-content;
 }
-.card{
+.card {
     display: none;
 }
