Map added, buggy though

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,12 @@ body {
 .card {
     display: none;
 }
+
+.container {
+    display: flex;
+}
+
+#map {
+    justify-content: flex-end;
+    width: 60%;
+}
